ref: m25 - remove strategyVersion, positionSizing
