# docs/04_api/openapi.yaml
@@ -446,7 +446,7 @@ components:
           type: string
     ExperimentMode:
       type: string
-      enum: [HISTORICAL_SIMULATION, LIVE_SIMULATION, PAPER_TRADING]
+      enum: [HISTORICAL_SIMULATION, PAPER_TRADING]
     StrategyType:
       type: string
       enum:
@@ -565,20 +565,9 @@ components:
           $ref: '#/components/schemas/StrategyConfigInput'
     StrategyConfigInput:
       type: object
-      required: [strategyVersion]
       properties:
-        strategyVersion:
-          type: string
         movingAverageWindow:
           type: integer
-          nullable: true
-        positionSizingType:
-          type: string
-          enum: [ALL_IN, FIXED_CASH, PERCENT_OF_PORTFOLIO, FIXED_QUANTITY]
-          nullable: true
-        positionSizingValue:
-          type: number
-          format: double
           nullable: true
         agentMode:
           allOf:
